# Embedded_Software_Simulator_-_Hardware_Abstraction_Layer

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docker/: Dockerfile.dev  dev-entrypoint.sh
include/: common.h
include/app/: cli_task.h  data_processing.h  logger_task.h  sensor_manager.h  sensor_sample.h  sensor_task.h
include/drivers/: adc_driver.h  gpio_driver.h  i2c_driver.h  spi_driver.h  timer_driver.h  uart_driver.h
include/hal/: IGpio.h  IUart.h  RTOSInterface.h  hal.h  hal_adc.h  hal_common.h  hal_gpio.h  hal_i2c.h  hal_manager.h  hal_manager_stubs.h  hal_spi.h  hal_timer.h  hal_uart.h  rtos_sim.h  virtual_gpio.h  virtual_hal_devices.hpp  virtual_uart.h
include/rtos/: freertos_sim.h  queues.h  rtos.h  semaphore.h  task_manager.h
include/utils/: config_manager.h  diagnostics.h  filters.h  logger.h  thread_safe_queue.h
include/virtual_drivers/: virtual_gpio.h  virtual_uart.h
src/: CMakeLists.txt  main.cpp
src/app/: app_main.cpp  cli_task.cpp  data_processing.cpp  logger_task.cpp  main.cpp  sensor_manager.cpp  sensor_task.cpp
src/drivers/: adc_driver.cpp  gpio_driver.cpp  i2c_driver.cpp  spi_driver.cpp  timer_driver.cpp  uart_driver.cpp
src/drivers/virtual/: virtual_uart.cpp
src/hal/: hal.cpp  hal_adc.cpp  hal_gpio.cpp  hal_i2c.cpp  hal_manager_stubs.cpp  hal_spi.cpp  hal_timer.cpp  hal_uart.cpp  rtos_sim.cpp
src/rtos/: freertos_sim.cpp  rtos_stubs.cpp  task_manager.cpp
src/utils/: config_manager.cpp  diagnostics.cpp  filters.cpp  logger.cpp
src/virtual_drivers/: virtual_gpio.cpp  virtual_uart.cpp
tests/: CMakeLists.txt  hal_mocks.h  test_drivers.cpp  test_hal.cpp  test_integration.cpp  test_rtos.cpp
